# vmrt_tesseract_utilities

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  pytest.ini  requirements.ini  requirements.txt  run.sh  setup.py  sort_and_lint.sh
.github/workflows/: run_pytests.yaml  sort_and_lint.yaml
requirements/: ci_requirements.txt  full.txt  pytest_requirements.txt
scripts/: combine_results.py  create_transcription_process.py  database_setup.py  extract_msg_files.py  file_info.py  image_to_text.py  replace_strings.py  transcribe_pdfs.py  vetbertdx.py
scripts/metadata_miners/: visit_date_miner.py
scripts/scrubbers/: flair-scrubber.py  huggyface-scrubber.py  install_spacy_models.sh  list_scrubber.py  pii-scrubber.py  pii_scrubber.py  presidio-scrubber.py  scrub_txt_files.sh  spacy-scrubber.py  stanza-scrubber.py
scripts/scrubbers/config/: bert-base_nlp.yaml  deid-roberta-i2b2_nlp.yaml  recognizers.yaml  spacy_nlp.yaml  stanford-deidentifier-base_nlp.yaml  vet-bert_nlp.yaml
tests/pytests/: replace_string_test.py  string_replacer_test.py  visit_date_extraction_test.py
vmrt_tesseract_utilities/: database.py  date_extractor.py  logging.py  report_data.py  scrubbing_utils.py  string_replacer.py  tesseract_operations.py
